Fix item column to be left aligned with icon

--- a/ui/js/dfv/src/fields/pick/list-select.scss
+++ b/ui/js/dfv/src/fields/pick/list-select.scss
@@ -52,7 +52,7 @@
 	display: block;
 	margin: 0;
 	padding: 0;
-	text-align: center;
+	text-align: left;
 }
 
 .pods-list-select-item__drag-handle {
